Fixed login button overlapping navigation menu on mobile

--- a/src/CSS/home-button.css
+++ b/src/CSS/home-button.css
@@ -16,7 +16,6 @@ button{
     outline: 0;
     overflow:hidden;
     background: none;
-    z-index: 1;
     cursor: pointer;
     transition:         0.08s ease-in;
     -o-transition:      0.08s ease-in;
